bytemark-client (2.4) UNRELEASED; urgency=low

  New features:
    * Support for backups via the `create backup`, `delete backup`, `schedule
      backups`, `unschedule backups`, `show disc` and `list backups` commands.
  

 -- telyn <telyn@bytemark.co.uk>  Fri, 16 Jun 2017 16:56:28 +0100

bytemark-client (2.3) UNRELEASED; urgency=low

  New features:
    * Logging in with 2-factor authentication is now supported, but setting up
      2-factor auth is not yet ready.
    * Added a new table output format using `--table` and `--table-fields` to
      most commands which support `--json` output. `--table` and `--json` are
      now aliases for the global flag `--output-format <json | table>` - which
      can also be specified using `config set output-format`. The default
      output format for most commands is 'human' - which behaves the same as
      previous versions, but is 'table' for admin-only commands.
      Table output is not intended to be machine readable and the list of
      fields displayed by default for any given command may change between
      releases of bytemark-client. Use the 'json' `--output-format` or the
      `list` commands for any scripting.
      Specify `--table-fields help` to see the available fields for a command
      There is an additional output-format called 'debug' which outputs the
      object as go code.
    * Added the `commands` command, which displays a list of all the commands
      available in bytemark-client.
    * `show server` will now accept a server's ID instead of a name.
    * `images`, `zones`, `storage` and `hwprofiles` commands can now be output
      as JSON or tables using the `--output-format`, `--json`, or `--table`
      flags.

  Changes / Fixes:
    * specifying --yubikey will now prompt you to login again if your current
      auth token was not created using a yubikey
    * some commands were not correctly setting a default account, forcing the